--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,13 @@ dependencies:
   internet_connection_checker:
   get: ^4.6.6
   jwt_decoder: ^2.0.1
+  modal_progress_hud_nsn: ^0.5.1
+  image_picker: ^1.0.7
+  flutter_image_compress: ^2.2.0
+  http_parser: ^4.0.2
+  razorpay_flutter: ^1.3.6
+  flutter_chat_ui: ^1.6.12
+  socket_io_client: ^1.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
