--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   razorpay_flutter: ^1.3.6
   flutter_chat_ui: ^1.6.12
   socket_io_client: ^1.0.2
+  fluttertoast: ^8.2.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
